crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__closure__assign_to_shadowed_later.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/assign_to_shadowed_later.lox
---
success: true
exit_code: 0
----- stdout -----
inner
assigned

----- stderr -----
