crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__closure__nested_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/nested_closure.lox
---
success: true
exit_code: 0
----- stdout -----
a
b
c

----- stderr -----
