crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__closure__reference_closure_multiple_times.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/reference_closure_multiple_times.lox
---
success: true
exit_code: 0
----- stdout -----
a
a

----- stderr -----
