crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__closure__shadow_closure_with_local.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/shadow_closure_with_local.lox
---
success: true
exit_code: 0
----- stdout -----
closure
shadow
closure

----- stderr -----
